@@ -413,6 +413,28 @@ x_Dist_Zilla:
       name: '@Author::SKIRMESS/MetaProvides::Package'
       version: '2.004003'
     -
+      class: Dist::Zilla::Plugin::MetaProvides::Package
+      config:
+        Dist::Zilla::Plugin::MetaProvides::Package:
+          finder:
+            - ':ExecFiles'
+          finder_objects:
+            -
+              class: Dist::Zilla::Plugin::FinderCode
+              name: ':ExecFiles'
+              version: '6.010'
+          include_underscores: '0'
+        Dist::Zilla::Role::MetaProvider::Provider:
+          $Dist::Zilla::Role::MetaProvider::Provider::VERSION: '2.002004'
+          inherit_missing: '1'
+          inherit_version: '1'
+          meta_noindex: '1'
+        Dist::Zilla::Role::ModuleMetadata:
+          Module::Metadata: '1.000031'
+          version: '0.004'
+      name: '@Author::SKIRMESS/MetaProvides::Package/ExecFiles'
+      version: '2.004003'
+    -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::SKIRMESS/MetaConfig'
       version: '6.010'
