@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added another invocation of MetaProvides::Package with :ExecFiles as
+    finder to add packages defined in scripts under bin to the provides
+    section
+
 0.016  2017-09-16 13:57:29 UTC
 
   - Added a new option 'sec_script_shebang' which can be used to disable the
